translation-tool/inputs/source_meta/objects/OfferMgmt_Supported_Offer_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Offer Type configurable</description>
    <fields>
        <fullName>New_Offer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_upgrade__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Service upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Token_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Token Offer</label>
        <type>Checkbox</type>
    </fields>
    <label>OfferMgmt Supported Offer Type</label>
</CustomObject>